--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="http://127.0.0.1:5500/">open the tasks</a>
+    <a href="task1.html">open the tasks</a>
 </body>
 </html>
