--- a/task6.html
+++ b/task6.html
@@ -1,58 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> 
-    <style>
-        .square {
-         display: inline-block;
-          height: 50px;
-          width: 50px;
-          background-color: white;
-          border: 2px solid black; /* Changed border-color to border */
-        }
-        .square1 {
-          height: 50px;
-          width: 50px;
-          background-color: white;
-          border: 2px solid black; /* Changed border-color to border */
-        }
-    </style>
-</head>
-<body>
-    <table border="2" bordercolor="black" height="40" width="75%"> <!-- Added '>' at the end of this line -->
-        <tr>
-            <td>FIRSTNAME</td>
-            <td>LASTNAME</td>
-            <td>AGE</td>
-        </tr>
-
-        <tr>
-            <td>RAMA</td>
-            <td>RAO</td>
-            <td>36</td>
-        </tr>
-
-        <tr>
-            <td>MADARA</td>
-            <td>UCHIHA</td>
-            <td>97</td>
-        </tr>
-        <tr>
-            <td>PETER</td>
-            <td>PARKER</td>
-            <td>19</td>
-        </tr>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="css6.css" />
+  </head>
+  <body>
+    <table>
+      <tr>
+        <th>Firstname</th>
+        <th>Lastname</th>
+        <th>Age</th>
+      </tr>
+      <tr>
+        <td>Jill</td>
+        <td>Smith</td>
+        <td>50</td>
+      </tr>
+      <tr>
+        <td>Eve</td>
+        <td>Jackson</td>
+        <td>94</td>
+      </tr>
+      <tr>
+        <td>John</td>
+        <td>Doe</td>
+        <td>80</td>
+      </tr>
     </table>
-    <br>
-    <br>
-    <br>
-
-    <div class="square"></div>
-    <div class="square"></div>
-    <br>
-    <div class="square"></div>
-    <div class="square"></div>
-    <br>
-    
-
-</body>
+    <div class="second">
+      <div id="tl"></div>
+      <div id="t2"></div>
+      <div id="t3"></div>
+      <div id="t4"></div>
+      <div id="t5"></div>
+      <div id="t6"></div>
+      <div id="t7"></div>
+      <div id="t8"></div>
+      <div id="t9"></div>
+    </div>
+  </body>
 </html>
