--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="task1.html">open the tasks</a>
+    <p>CHIRANJEEVI YESHWANTH TASKS</p>
+    <a href="task1.html">task1</a>
+    <br>
+    <a href="task2.html">task2</a>
+    <br>
+    <a href="task3.html">task3</a>
+    <br>
+    <a href="task4.html">task4</a>
+    <br>
+    <a href="task5.html">task5</a>
+    <br>
+    <a href="task6.html">task6</a>
+    <br>
+    <a href="task7.html">task7</a>
+    <br>
+    <a href="task8.html">task8</a>
+    <br>
+    <a href="task9.html">task9</a>
+    <br>
+    <a href="task10.html">task10</a>
+    <br>
+    <a href="task11.html">task11</a>
+    <br>
+    <a href="task12.html">task12</a>
 </body>
 </html>
