--- a/index.html
+++ b/index.html
@@ -7,28 +7,36 @@
 </head>
 <body>
     <p>CHIRANJEEVI YESHWANTH TASKS</p>
-    <a href="task1.html">task1</a>
+
+    <h1>bootstrap</h1>
+    <a href="bs1.html">Task1</a>
     <br>
-    <a href="task2.html">task2</a>
+    <a href="bs2.html">Task2</a>
     <br>
-    <a href="task3.html">task3</a>
+    <a href="bs3.html">Task3</a>
     <br>
-    <a href="task4.html">task4</a>
+    <a href="bs4.html">Task4</a>
     <br>
-    <a href="task5.html">task5</a>
+    <a href="bs5.html">Task5</a>
     <br>
-    <a href="task6.html">task6</a>
+    <a href="bs6.html">Task6</a>
     <br>
-    <a href="task7.html">task7</a>
+    <h1>JavaScript</h1>
     <br>
-    <a href="task8.html">task8</a>
+    <a href="js1.js">Task1</a>
     <br>
-    <a href="task9.html">task9</a>
+    <a href="js2.html">Task2</a>
     <br>
-    <a href="task10.html">task10</a>
+    <a href="js3.html">Task3</a>
     <br>
-    <a href="task11.html">task11</a>
+    <a href="js4.html">Task4</a>
     <br>
-    <a href="task12.html">task12</a>
+    <a href="js5.html">Task5</a>
+    <br>
+    <a href="js6.html">Task6</a>
+    <br>
+    <a href="js7.html">Task7</a>
+    <br>
+    <a href="js8.html">Task8</a>
 </body>
 </html>
