--- a/task8.html
+++ b/task8.html
@@ -9,13 +9,16 @@ table {
 }
 
 td, th {
-  border: 1px solid green;
+  border: 0px;
   text-align: left;
   padding: 8px;
 }
 
 tr:nth-child(1) {
   background-color: green;
+}
+tr:nth-child(even) {
+  background-color: grey;
 }
 </style>
 </head>
