--- a/index.html
+++ b/index.html
@@ -1,42 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Table with Links</title>
 </head>
 <body>
-    <p>CHIRANJEEVI YESHWANTH TASKS</p>
+<b>REACT TASKS</b>
+<table border="1">
+  <tr>
+    <td>Task Number</td>
+    <td>Repository Link</td>
+    <td>Deployment Link</td>
+  </tr>
+  <tr>
+    <td>Task-1</td>
+    <td><a href="https://example.com">Click for Repository</a></td>
+    <td><a href="https://example.com">Click for Deployment</a></td>
+  </tr>
+  <tr>
+    <td>Task-2</td>
+    <td><a href="https://example.com">Click for Repository</a></td>
+    <td><a href="https://example.com">Click for Deployment</a></td>
+  </tr>
+  <tr>
+    <td>Task-3</td>
+    <td><a href="https://example.com">Click for Repository</a></td>
+    <td><a href="https://example.com">Click for Deployment</a></td>
+  </tr>
+  <tr>
+    <td>Task-4</td>
+    <td><a href="https://example.com">Click for Repository</a></td>
+    <td><a href="https://example.com">Click for Deployment</a></td>
+  </tr>
+  <tr>
+    <td>Task-5</td>
+    <td><a href="https://example.com">Click for Repository</a></td>
+    <td><a href="https://example.com">Click for Deployment</a></td>
+  </tr>
+  <tr>
+    <td>Task-6</td>
+    <td><a href="https://example.com">Click for Repository</a></td>
+    <td><a href="https://example.com">Click for Deployment</a></td>
+  </tr>
+</table>
 
-    <h1>bootstrap</h1>
-    <a href="bs1.html">Task1</a>
-    <br>
-    <a href="bs2.html">Task2</a>
-    <br>
-    <a href="bs3.html">Task3</a>
-    <br>
-    <a href="bs4.html">Task4</a>
-    <br>
-    <a href="bs5.html">Task5</a>
-    <br>
-    <a href="bs6.html">Task6</a>
-    <br>
-    <h1>JavaScript</h1>
-    <br>
-    <a href="js1.js">Task1</a>
-    <br>
-    <a href="js2.html">Task2</a>
-    <br>
-    <a href="js3.html">Task3</a>
-    <br>
-    <a href="js4.html">Task4</a>
-    <br>
-    <a href="js5.html">Task5</a>
-    <br>
-    <a href="js6.html">Task6</a>
-    <br>
-    <a href="js7.html">Task7</a>
-    <br>
-    <a href="js8.html">Task8</a>
 </body>
 </html>
